<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.RecuperaPassword"
    android:background="@drawable/sfondoapplicazione">


    <TextView
        android:id="@+id/textViewEmail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/expletussansregular"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/buttonTornaAlLoginRecupero"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/expletussans_bold"
        android:text="@string/torna_al_login_frase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"

        />

    <Button
        android:id="@+id/buttonCambiaPsw"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/expletussans_bold"
        android:text="@string/invia_la_mail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376"

        />

    <EditText
        android:id="@+id/EmailRecupero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:background="@drawable/edit_text_border_small"
        android:ems="10"
        android:fontFamily="@font/expletussansregular"
        android:foregroundGravity="top"
        android:hint="@string/insert_the_mail_here"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0."
        android:text="@string/recupero_password"
        android:textSize="35sp"
        android:fontFamily="@font/expletussans_bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        />


</androidx.constraintlayout.widget.ConstraintLayout>